# django-elasticsearch

./: .gitignore  docker-compose.prod.yml  docker-compose.yml
reverse-proxy/: nginx.conf
server/: .dockerignore  .env.template  Dockerfile  pyproject.toml
server/catalog/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
server/catalog/fixtures/: test_wines.json
server/catalog/management/commands/: bulk_update.py  elasticsearch.py  update_mapping.py
server/catalog/migrations/: 0001_initial.py  0002_auto_20211002_0208.py  0003_search_vector.py  0004_update_search_vector.py  0005_winesearchword.py  0006_update_wine_search_word.py
server/catalog/tests/: test_views.py
server/perusable/: settings.py  urls.py
