[tool.poetry]
name = "perusable"
version = "0.1.0"
description = ""
authors = ["Isaias Caporusso <isaias.caporusso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
django-filter = "^21.1"
djangorestframework = "^3.12.4"
elasticsearch-dsl = "^7.4.0"
Pillow = "^8.3.2"
django-debug-toolbar = "^3.2.2"
django-cors-headers = "^3.10.0"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
